# identity-service

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  main.py
app/api/: routes.py
app/core/: auth_service.py  dependencies.py  logging_config.py  notification_service.py  security.py
app/db/: models.py  session.py
app/integrations/: fastapi_users_adapter.py  notification_adapter.py
app/schemas/: auth.py
docs/: ONBOARDING.md  TESTING.md
migrations/: env.py
migrations/versions/: a292500400a2_initial_tables.py
tests/: conftest.py  test_auth.py  test_auth_interface.py
