[project]
name = "identity-service"
version = "0.1.0"
description = "Microservice for authentication and user management."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.135.1",
    "fastapi-users[fastapi,sqlalchemy]>=15.0.4",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pydantic-settings>=2.13.1",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.48",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.6.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
indent-width = 4
extend-exclude = ["migrations/versions/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TID"]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
env = [
    "SERVICE_NAME=test_service",
    "POSTGRES_DB=test_db",
    "POSTGRES_USER=test_user",
    "POSTGRES_PASSWORD=test_password",
    "POSTGRES_HOST=localhost",
    "POSTGRES_PORT=5432",
    "SECRET_KEY=test_secret_key_for_ci_only_do_not_use_in_production",
    "NOTIFICATION_API_KEY=test_changeme_generate_32_byte_hex_key",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/__init__.py",
    "migrations/*",
    "app/main.py",
]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"
